--- a/style.css
+++ b/style.css
@@ -114,8 +114,17 @@ button:hover {
   width: 100%;
 }
 
-
-
+#nicknameInput {
+  display: block;
+  width: 100%;
+  padding: 0.75rem;
+  margin: 0.5rem 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 300px;
+}
 
 /* Barre de navigation */
 .bottom-bar {
